# asr-demo

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  model.py  pyproject.toml  requirements.txt  server.py  util.py
templates/: index.html  result.html
