[tool.poetry]
name = "asr"
version = "0.1.0"
description = "---asr--"
authors = ["syu-tan <syuchimu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.25.1"
numpy = "^1.21.1"
sox = "^1.4.1"
matplotlib = "^3.4.2"
torch = "^1.9.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
